Minor fixes for pictures (no-wrap)

--- a/html/pictures/assets/index.css
+++ b/html/pictures/assets/index.css
@@ -49,6 +49,9 @@ body {
     padding-left: 10px;
     width: 160px;
     font-size: 12px;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .sea5kg-picture-status {
